--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   "scripts": {
     "start": "node --inspect index.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "discord.js": "^13.1.0"
+  }
 }
