--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node --inspect index.js"
   },
   "dependencies": {
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "dotenv": "^10.0.0"
   }
 }
